# app/Models/Budget.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class Budget extends Model
+{
+    use HasFactory;
+    use SoftDeletes;
+
+    protected $table = 'budget';
+    protected $primaryKey = 'id';
+    public $timestamps = true;
+    protected $dates = ['deleted_at'];
+
+    protected $fillable=[
+        "date_budget",
+        "sum",
+    ];
+
+    protected $hidden=[
+        'deleted_at'
+    ];
+
+    public function validate($inputs,$create=true) {
+
+        return \Validator::make($inputs, [
+
+        ]);
+    }
+}
